[package]
name = "mdav"
version = "0.5.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
clap = { version = "4.5.9", features = ["derive"] }
indicatif = "0.17.8"
log = "0.4.22"
num = "0.4.3"
rayon = "1.10.0"
